--- a/style.css
+++ b/style.css
@@ -1,27 +1,32 @@
 @keyframes white-circle{
     0%{
-      
       left: 0;
+      transform: rotate(0deg);
       background-color: green;
     }
     25% {
-      top: 0;
-      left: 100%;
+        top: 0;
+        left: 100%;
+        transform: rotate(90deg);
       background-color: pink;
-      transform: translate(-100%);
+     
     }
     50% {
       top: 100%;
       left: 100%;
      
       background-color: blue;
-      transform: translate(-100%)
+      transform: rotate(180deg);
     }
+     
     75% {
-      top: 100%;
-      left: 0;
-      background-color: red;
-    }
+        top: 100%;
+        left: 0;
+        transform: rotate(270deg);
+        background-color: red;
+      }
+      
+      
     100%{
         top: 0;
         right: 100;
